kubernetes/workers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hoarder-workers
  template:
    metadata:
      labels:
        app: hoarder-workers
    spec:
      containers:
        - name: workers
          image: ghcr.io/hoarder-app/hoarder-workers:HOARDER_VERSION_PLACEHOLDER
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
