kubernetes/ingress_sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoarder-web-ingress
  namespace: hoarder
spec:
  rules:
  - host: "hoarder.example.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: "web"
            port:
              number: 3000
